--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio-Tarun</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <meta name="description" content="" />
     <meta name="author" content="Tarun Sharma" />
 
     <meta property="og:title" content="Portfolio/Tarun" />
